--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,6 @@
     "jsx": "preserve",
     "jsxImportSource": "solid-js",
   },
-  "include": ["src"],
+  "include": ["src", "preview",],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
