--- a/package.json
+++ b/package.json
@@ -60,11 +60,9 @@
     "vitest": "^0.28.4"
   },
   "dependencies": {
+    "klinecharts": "v10.0.0-alpha5",
     "lodash": "^4.17.21",
     "solid-js": "^1.6.11"
-  },
-  "peerDependencies": {
-    "klinecharts": ">=10.0.0"
   },
   "packageManager": "pnpm@9.15.0+sha512.76e2379760a4328ec4415815bcd6628dee727af3779aaa4c914e3944156c4299921a89f976381ee107d41f12cfa4b66681ca9c718f0668fa0831ed4c6d8ba56c"
 }
