--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "dev": "vite --mode preview",
     "build-core": "tsc && vite build",
     "build-dts": "dts-bundle-generator --no-banner true --umd-module-name klinechartspro -o dist/index.d.ts src/index.ts",
-    "build": "npm run build-core && npm run build-dts",
+    "copy": "rm -rf ../metatrader-env/server/klinechart-pro;cp -R ./dist ../metatrader-env/server/klinechart-pro",
+    "build": "npm run build-core && npm run build-dts && npm run copy",
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
     "docs:preview": "vitepress preview docs",
@@ -60,9 +61,11 @@
     "vitest": "^0.28.4"
   },
   "dependencies": {
-    "klinecharts": "^v9",
     "lodash": "^4.17.21",
     "solid-js": "^1.6.11"
+  },
+  "peerDependencies": {
+    "klinecharts": "^v9"
   },
   "packageManager": "pnpm@9.15.0+sha512.76e2379760a4328ec4415815bcd6628dee727af3779aaa4c914e3944156c4299921a89f976381ee107d41f12cfa4b66681ca9c718f0668fa0831ed4c6d8ba56c"
 }
